<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:background="#103F51B5"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/lil_post"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/icon_post"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/tests"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/text_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/post"
                android:textColor="@android:color/black"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/lil_accounts"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/icon_accounts"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/results"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/text_accounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/accounts"
                android:textColor="@android:color/black"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/lil_history"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/icon_history"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/yoga"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/text_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/history"
                android:textColor="@android:color/black"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/lil_settings"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/icon_settings"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/music"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/text_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/settings"
                android:textColor="@android:color/black"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/lil_rateus"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/icon_rateus"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/rate"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/text_rateus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/rate_us"
                android:textColor="@android:color/black"/>

        </LinearLayout>
        <ListView
            android:id="@android:id/list"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:divider="@null">
        </ListView>

    </LinearLayout>
</layout>